--- a/mia/Views/HomePage/InfectUserView/HXInfectUserItemView.xib
+++ b/mia/Views/HomePage/InfectUserView/HXInfectUserItemView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,24 +13,36 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="p7H-W7-LeR">
-                    <rect key="frame" x="135" y="259" width="50" height="50"/>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rS0-ee-IVB">
+                    <rect key="frame" x="142" y="266" width="36" height="36"/>
+                    <animations/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="rS0-ee-IVB" secondAttribute="height" multiplier="1:1" id="jpu-fg-LJ5"/>
+                    </constraints>
+                </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="p7H-W7-LeR">
+                    <rect key="frame" x="144" y="268" width="32" height="32"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="p7H-W7-LeR" secondAttribute="height" multiplier="1:1" id="QmG-QA-5zb"/>
-                        <constraint firstAttribute="width" constant="50" id="k8o-Xw-D9c"/>
+                        <constraint firstAttribute="width" constant="32" id="k8o-Xw-D9c"/>
                     </constraints>
                 </imageView>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="rS0-ee-IVB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4Vg-Ii-EIn"/>
+                <constraint firstItem="rS0-ee-IVB" firstAttribute="width" secondItem="p7H-W7-LeR" secondAttribute="width" multiplier="1.15" id="Hqg-Ao-rEY"/>
                 <constraint firstItem="p7H-W7-LeR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="JdG-hp-EhZ"/>
+                <constraint firstItem="rS0-ee-IVB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="nhe-c9-98A"/>
                 <constraint firstItem="p7H-W7-LeR" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="qIH-4w-Rmc"/>
             </constraints>
             <connections>
                 <outlet property="header" destination="p7H-W7-LeR" id="FMz-fP-0RG"/>
-                <outlet property="widthContraint" destination="k8o-Xw-D9c" id="Wbp-Tw-WMQ"/>
+                <outlet property="headerWidthContraint" destination="k8o-Xw-D9c" id="7t2-o7-jFz"/>
+                <outlet property="whiteBorder" destination="rS0-ee-IVB" id="boS-hS-vjM"/>
             </connections>
             <point key="canvasLocation" x="453" y="417"/>
         </view>
